--- a/index.html
+++ b/index.html
@@ -44,22 +44,22 @@
         <div class="grid-proyectos">
           <!-- Tarjetas vacías, listas para rellenar -->
           <div class="tarjeta-proyecto">
-            <img src="imagen/LandingPage.png" alt="QR de la Landing Page con Registro" class="img-qr">
+            <img src="imagen/Landing_Page.png" alt="QR de la Landing Page con Registro" class="img-qr">
             <h3>Landing Page con Registro.</h3>
             <a href="https://biohazard23.github.io/Landing-Page-con-Registro./#inicio" class="btn-visitar" target="_blank">Visitar</a>
           </div>
           <div class="tarjeta-proyecto">
-            <img src="imagen/PaginaSemantica.png" alt="QR de la Pagina Semantica." class="img-qr">
+            <img src="imagen/Pagina_Semantica.png" alt="QR de la Pagina Semantica." class="img-qr">
             <h3>Pagina Semantica de Etiquetas HTML.</h3>
             <a href="https://biohazard23.github.io/Pagina-Semantica./" class="btn-visitar" target="_blank">Visitar</a>
           </div>
           <div class="tarjeta-proyecto">
-            <img src="imagen/Comuna9.png" alt="QR de la Feria Cultural Comuna 9." class="img-qr">
+            <img src="imagen/Comuna_9.png" alt="QR de la Feria Cultural Comuna 9." class="img-qr">
             <h3>Feria Cultural de la Comuna 9.</h3>
             <a href="https://biohazard23.github.io/Feria-Cultural-Comuna-9./" class="btn-visitar" target="_blank">Visitar</a>
           </div>
           <div class="tarjeta-proyecto">
-            <img src="imagen/MenuRestaurante.png" alt="QR del Menu de Restaurante Interactivo" class="img-qr">
+            <img src="imagen/Menu_Restaurante.png" alt="QR del Menu de Restaurante Interactivo" class="img-qr">
             <h3>Menu de Restaurante Interactivo.</h3>
             <a href="https://biohazard23.github.io/Menu-de-Restaurante-Interactivo./" class="btn-visitar" target="_blank">Visitar</a>
           </div>
@@ -67,6 +67,11 @@
             <img src="imagen/MinOS.png" alt="QR del MiniOS" class="img-qr">
             <h3>MiniOS Sistema Operativo web Ficticio.</h3>
             <a href="https://johan192004.github.io/Min_OS/" class="btn-visitar" target="_blank">Visitar</a>
+          </div>
+          <div class="tarjeta-proyecto">
+            <img src="imagen/Crudy.png" alt="QR de CRUDY" class="img-qr">
+            <h3>CRUDY Juego de Desafio Logico.</h3>
+            <a href="https://johan192004.github.io/crudy/" class="btn-visitar" target="_blank">Visitar</a>
           </div>
         </div>
       </div>
