--- a/index.html
+++ b/index.html
@@ -73,6 +73,11 @@
             <h3>CRUDY Juego de Desafio Logico.</h3>
             <a href="https://johan192004.github.io/crudy/" class="btn-visitar" target="_blank">Visitar</a>
           </div>
+          <div class="tarjeta-proyecto">
+            <img src="imagen/Crudzocial.png" alt="QR de Crudzocial" class="img-qr">
+            <h3>Gestion de Usuarios Crudzocial.</h3>
+            <a href="https://johan192004.github.io/crudzocial/" class="btn-visitar" target="_blank">Visitar</a>
+          </div>
         </div>
       </div>
     </section>
