📜 Agregada sección de Certificaciones con certificado RIWI

--- a/index.html
+++ b/index.html
@@ -168,6 +168,26 @@
       </div>
     </section>
 
+    <!-- Certificaciones -->
+    <section id="certificaciones" class="seccion certificaciones fade-in">
+      <div class="container">
+        <h2>Certificaciones</h2>
+        <p class="subtexto">Formación profesional y reconocimientos obtenidos.</p>
+        
+        <div class="certificado-container">
+          <div class="certificado-card">
+            <img src="imagen/certificado-riwi.png" alt="Certificado RIWI - Proyecto Integrador Ruta Avanzada" class="certificado-img">
+            <div class="certificado-info">
+              <h3>🎓 RIWI - Proyecto Integrador</h3>
+              <p><strong>Ruta Avanzada</strong></p>
+              <p>Entrenamiento técnico, inglés y habilidades socioemocionales.</p>
+              <span class="certificado-fecha">📅 Diciembre 2025</span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <!-- Contacto -->
     <section id="contacto" class="seccion contacto fade-in">
       <div class="container">
