✨ Mejorado diseño de sección Certificaciones con separación visual

--- a/index.html
+++ b/index.html
@@ -173,10 +173,11 @@
       <div class="container">
         <h2>Certificaciones</h2>
         <p class="subtexto">Formación profesional y reconocimientos obtenidos.</p>
-        
+
         <div class="certificado-container">
           <div class="certificado-card">
-            <img src="imagen/certificado-riwi.png" alt="Certificado RIWI - Proyecto Integrador Ruta Avanzada" class="certificado-img">
+            <img src="imagen/certificado-riwi.png" alt="Certificado RIWI - Proyecto Integrador Ruta Avanzada"
+              class="certificado-img">
             <div class="certificado-info">
               <h3>🎓 RIWI - Proyecto Integrador</h3>
               <p><strong>Ruta Avanzada</strong></p>
