--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       <ul class="nav-links">
         <li><a href="#presentacion">Presentación</a></li>
         <li><a href="#proyectos">Proyectos</a></li>
+        <li><a href="#certificaciones">Certificaciones</a></li>
         <li><a href="#contacto">Contacto</a></li>
       </ul>
     </nav>
