📄 Agregado botón CV a la barra de navegación

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <li><a href="#proyectos">Proyectos</a></li>
         <li><a href="#certificaciones">Certificaciones</a></li>
         <li><a href="#contacto">Contacto</a></li>
+        <li><a href="imagen/Hoja de vida Juan Manuel Arango Arana.pdf" class="btn-cv" target="_blank">📄 CV</a></li>
       </ul>
     </nav>
   </header>
