--- a/index.html
+++ b/index.html
@@ -12,7 +12,12 @@
   <header class="header">
     <nav class="container nav">
       <h1 class="logo">Juan Manuel Arango Arana.</h1>
-      <ul class="nav-links">
+      <button class="hamburger" id="hamburger" aria-label="Menú">
+        <span class="bar"></span>
+        <span class="bar"></span>
+        <span class="bar"></span>
+      </button>
+      <ul class="nav-links" id="nav-links">
         <li><a href="#presentacion">Presentación</a></li>
         <li><a href="#proyectos">Proyectos</a></li>
         <li><a href="#certificaciones">Certificaciones</a></li>
@@ -214,6 +219,25 @@
       <p>&copy; 2025 Juan Manuel Arango Arana. Todos los derechos reservados</p>
     </div>
   </footer>
+
+  <script>
+    // Hamburger Menu Toggle
+    const hamburger = document.getElementById('hamburger');
+    const navLinks = document.getElementById('nav-links');
+
+    hamburger.addEventListener('click', () => {
+      hamburger.classList.toggle('active');
+      navLinks.classList.toggle('active');
+    });
+
+    // Cerrar menú al hacer click en un enlace
+    document.querySelectorAll('.nav-links a').forEach(link => {
+      link.addEventListener('click', () => {
+        hamburger.classList.remove('active');
+        navLinks.classList.remove('active');
+      });
+    });
+  </script>
 </body>
 
 </html>
