✨ Mejoras finales: SEO, Open Graph, favicon y botón volver arriba

--- a/index.html
+++ b/index.html
@@ -4,7 +4,35 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Portafolio | Juan Manuel</title>
+
+  <!-- SEO Meta Tags -->
+  <title>Juan Manuel Arango Arana | Desarrollador Backend</title>
+  <meta name="description"
+    content="Portafolio de Juan Manuel Arango Arana - Desarrollador Backend especializado en .NET, C#, Java Spring Boot. Proyectos con Clean Architecture, Docker y microservicios." />
+  <meta name="keywords"
+    content="desarrollador backend, .NET, C#, Java, Spring Boot, Colombia, portafolio, programador" />
+  <meta name="author" content="Juan Manuel Arango Arana" />
+
+  <!-- Open Graph (Facebook, LinkedIn, WhatsApp) -->
+  <meta property="og:title" content="Juan Manuel Arango Arana | Desarrollador Backend" />
+  <meta property="og:description"
+    content="Portafolio profesional con proyectos de .NET, Java Spring, microservicios y más." />
+  <meta property="og:image" content="https://biohazard23.github.io/Portafolio-Juan-Manuel/assets/img/imagen1.jpg" />
+  <meta property="og:url" content="https://biohazard23.github.io/Portafolio-Juan-Manuel/" />
+  <meta property="og:type" content="website" />
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Juan Manuel Arango Arana | Desarrollador Backend" />
+  <meta name="twitter:description"
+    content="Portafolio profesional con proyectos de .NET, Java Spring, microservicios y más." />
+  <meta name="twitter:image" content="https://biohazard23.github.io/Portafolio-Juan-Manuel/assets/img/imagen1.jpg" />
+
+  <!-- Favicon -->
+  <link rel="icon" type="image/svg+xml"
+    href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>💻</text></svg>" />
+
+  <!-- Stylesheet -->
   <link rel="stylesheet" href="assets/css/style.css" />
 </head>
 
@@ -219,6 +247,9 @@
       <p>&copy; 2025 Juan Manuel Arango Arana. Todos los derechos reservados</p>
     </div>
   </footer>
+
+  <!-- Botón volver arriba -->
+  <button id="scrollToTop" class="scroll-to-top" aria-label="Volver arriba">↑</button>
 
   <script src="assets/js/main.js"></script>
 </body>
